--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@ html {
     color: rgb(230, 221, 221);
     padding: 0;
     margin: 0;
-    overflow: hidden;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -11,32 +10,38 @@ html {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;    
-    cursor:grab;
-    width:100vw;
-    height:100vh;
 }
 
 body {
-    overflow: hidden;
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
-}
-
-body:active{
-    cursor:grabbing;
 }
 
 #root {
+    overflow-x:hidden;
     width:100%;
-    height:100%;
-    overflow: hidden;
 }
 
-h1{
+header {
+    margin: 0;
+    padding-top: 1em;
+    background-color: rgb(14, 29, 61);
+    padding-bottom: 2em;
+    box-shadow: 10px 5px 5px black;
+}
+
+h1 {
+    margin-top: 0;
     text-align:center;
 }
+
+h3 {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight:normal;
+    text-align:center;
+}
+
 
 canvas {
     position: absolute;
@@ -47,7 +52,6 @@ canvas {
     box-sizing: border-box;
     position: absolute;
     border-radius: 0.05em;
-    padding-right: 0.5em;
     text-align:center;
     vertical-align: middle;
     width:fit-content;
@@ -59,8 +63,7 @@ canvas {
     cursor:default;
     transition: opacity 0.045s;
     color: rgb(230, 221, 221);
-    background: rgb(62,34,0);
-    background: linear-gradient(135deg, rgba(62,34,0,1) 0%, rgba(31, 31, 31, 0.85) 100%);
+    background: rgb(31,31,31);
     align-items:center;
     transition: transform 0.1s;
 }
@@ -77,12 +80,12 @@ a {
 
 .person.lancaster {
     background: rgb(62,34,0);
-    background: linear-gradient(135deg, rgba(62,34,0,1) 0%, rgba(162,0,0,0.85) 100%);
+    background: linear-gradient(135deg, rgba(110, 0, 0, 0.85) 0%,  rgba(81, 31, 31, 0.85) 100%);
 }
 
 .person.york {
     background: rgb(62,34,0);
-    background: linear-gradient(135deg, rgba(62,34,0,1) 0%, rgba(196,196,196,0.85) 100%);
+    background: linear-gradient(135deg, rgba(173, 173, 173, 0.85) 0%, rgba(31, 31, 31, 0.85) 100%);
 }
 
 .personText {
