--- a/src/index.css
+++ b/src/index.css
@@ -26,14 +26,16 @@ body {
 header {
     width:100%;
     margin: 0;
-    padding: 1em 0em 2em 0em;
+    padding: 1em 0em 1em 0em;
     background-color: rgb(14, 29, 61);
     box-shadow: 10px 5px 5px black;
+    z-index:5;
 }
 
-h1 {
+h2 {
     width:fit-content;
     margin: auto;
+    margin-bottom:0.5em;
     text-align:center;
 }
 
@@ -116,3 +118,21 @@ a {
     border-top:1px solid #bfc8fa;
     position:absolute;
 }
+
+.person-tooltip {
+    position:absolute;
+    right:-1em;
+    bottom:-1em;
+    white-space: nowrap;
+    color:white;
+    background-color: rgba(0,0,0,0.75);
+    padding:2px 4px;
+    border-radius:5px;
+    border: 1px solid rgba(255,255,255,0.5);
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
+  }
