Overhaul project structure

--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,18 @@ html {
     user-select: none;    
 }
 
+#map {
+    height:100%;
+    background-color: #081124;
+}
+
 body {
     margin: 0;
     padding: 0;
+    height: 100vh;
     width: 100%;
-}
-
-#root {
-    overflow-x:hidden;
-    width:100%;
+    display:flex;
+    flex-direction: column;
 }
 
 header {
@@ -40,17 +43,17 @@ h2 {
 }
 
 h3 {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-weight:normal;
     text-align:center;
 }
 
-canvas {
-    position: absolute;
-    width:100%;
+.leaflet-container {
+    line-height: 1;
 }
 
 .person {
+    display: flex;
+    flex-direction: row;
     box-sizing: border-box;
     position: absolute;
     border-radius: 0.05em;
@@ -62,7 +65,6 @@ canvas {
     font-family: sans-serif;
     border: 0.1em solid rgb(66, 66, 66);
     transform: translate(-50%, -50%);
-    z-index: 1;
     cursor:default;
     transition: opacity 0.045s;
     color: rgb(230, 221, 221);
@@ -72,7 +74,6 @@ canvas {
 }
 
 .person:hover{
-    cursor:pointer;
     transform-origin: center;
     transform: translate(-50%, -50%) scale(1.2);
 }
@@ -96,17 +97,50 @@ a {
     background: linear-gradient(135deg, rgba(185, 75, 99, 1) 0%, rgba(85, 53, 53, 1) 100%);
 }
 
-.personText {
+#person-text {
+    min-width:7em;
     padding: 0 1em;
     text-align: center;
     font-weight:bold;
-    font-size: 1em;
+    font-size: 1.1em;
+    line-height: normal;
     transition: font-size 0s;
+    white-space:nowrap;
 }
 
-.onTop {
+#person-link {
     position: relative;
-    z-index: 7;
+    min-width: 3.2em;
+    background-color: rgb(20, 20, 20);
+    cursor:pointer;
+}
+
+#person-img {
+    vertical-align: middle;
+    height: 4em;
+    opacity: 0.9;
+}
+
+.monarch {
+    background-color: gold;
+    color:black;
+}
+
+.heir {
+    background-color: silver;
+    color:black;
+}
+
+.bronze {
+    background-color: #cd7f32;
+    color:black;
+}
+
+#top-bar {
+    display: flex;
+    width: 100%;
+    align-items:center;
+    flex-direction: row;
 }
 
 .verticalLine {
@@ -119,10 +153,15 @@ a {
     position:absolute;
 }
 
-.person-tooltip {
+#year-description {
+    text-align:center;
+    margin-top:-2.5em;
+}
+
+#person-tooltip {
     position:absolute;
     right:-1em;
-    bottom:-1em;
+    bottom:-1.45em;
     white-space: nowrap;
     color:white;
     background-color: rgba(0,0,0,0.75);
@@ -130,13 +169,3 @@ a {
     border-radius:5px;
     border: 1px solid rgba(255,255,255,0.5);
 }
-
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%
-  }
-
-.third-width {
-    width: 33%;
-  }
